<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimaryDark"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">
    <ImageView
        android:src="@drawable/calm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/answer_text_view"
        android:text="@string/my_text_question"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="34dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/true_text"
            android:text="@string/true_text"
            android:layout_marginRight="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/false_text"
            android:text="@string/false_text"
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <ImageButton
            android:id="@+id/prev_button"
            android:src="@drawable/baseline_keyboard_arrow_left_white_18dp"
            android:text="@string/prev_question"
            android:contentDescription="@string/prev_question"
            android:layout_marginHorizontal="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </ImageButton>

        <ImageButton
            android:id="@+id/next_button"
            android:src="@drawable/baseline_keyboard_arrow_right_white_18dp"
            android:text="@string/next_question"
            android:layout_marginHorizontal="20dp"
            android:contentDescription="@string/next_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </ImageButton>

    </LinearLayout>

    <Button
        android:id="@+id/show_answer"
        android:text="@string/show_answer"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </Button>


</LinearLayout>